force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks this constraint as active or inactive.</description>
        <inlineHelpText>Marks this constraint as active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>