force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__CheckPriorPurchases__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CheckPriorPurchases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows you to check on past purchases in the Account.</description>
        <inlineHelpText>Check if you want to look up prior purchases of Constraining Option within the Account.</inlineHelpText>
        <label>Check Prior Purchases</label>
        <type>Checkbox</type>
    </CustomField>