force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__ConfiguredSKU__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU which configuration is being constrained.</description>
        <inlineHelpText>Product SKU being constrained.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Option Constraints</relationshipLabel>
        <relationshipName>Option_Constraints</relationshipName>
        <type>Lookup</type>
    </CustomField>