force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__ConstrainedOption__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConstrainedOption__c</fullName>
        <description>Option that&apos;s being constrained.</description>
        <inlineHelpText>Select the option in the bundle that you want applied to this constraint.</inlineHelpText>
        <label>Constrained Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__ProductOption__c.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Constraints</relationshipLabel>
        <relationshipName>Constraints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>