force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__ConstrainingOption__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConstrainingOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Option that&apos;s constraining another option.</description>
        <inlineHelpText>Choose an additional option if the Constrained Option is constraining another option.</inlineHelpText>
        <label>Constraining Option</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductOption__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Constraining</relationshipLabel>
        <relationshipName>Constraining</relationshipName>
        <type>Lookup</type>
    </CustomField>