force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__OptionConstraintGroup__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OptionConstraintGroup__c</fullName>
        <description>Allows you to apply multiple constraints on a single option.</description>
        <inlineHelpText>If multiple Option Constraints target the same Constrained Option, putting the Option Constraints in the same group will require ALL Constraining Options to be selected.</inlineHelpText>
        <label>Option Constraint Group</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>