force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>Determines behavior of this constraint.</description>
        <inlineHelpText>Choose the behavior of this constraint: dependency means inclusion is required while exclusion means the option constraint is not selected when the constraining option is or vice versa.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dependency</fullName>
                    <default>true</default>
                    <label>Dependency</label>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>